<resources>
    <string name="app_name">WebServicePrectice</string>
    <string name="nombre">Nombre</string>
    <string name="inicio_de_secsion">Inicio de secsion</string>
    <string name="contrase_a">Contraseña</string>
    <string name="name">Name</string>
    <string name="listado">Listado</string>
    <string name="ingresar">Ingresar</string>
    <string name="password">Password</string>
    <string name="txtname">txtname</string>
</resources>